# aetherspeak

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
aetherspeak/: __init__.py  cli.py
aetherspeak/api/: __init__.py  models.py  server.py
aetherspeak/core/: __init__.py  decoder.py  encoder.py  protocol.py
aetherspeak/utils/: __init__.py  adaptation.py  embedding.py  metrics.py  symbolic.py  tokenizer.py
docs/: api.md
examples/: api_server.py  basic_usage.py
tests/: __init__.py  test_core.py
